# booking_tickets

./: my_db.sql  pyproject.toml  structure.txt  tickets.sql
src/booking_tickets/: __init__.py
src/booking_tickets/db/: __init__.py  config.py
src/booking_tickets/db/models/: __init__.py  company.py  poll.py  ticket.py  user.py
src/booking_tickets/routes/: __init__.py  company.py  contact_info.py  errors.py  home.py  poll.py  register.py  ticket.py  ticket_company.py  ticket_user.py
src/booking_tickets/static/css/: style.css
src/booking_tickets/templates/: __base.html  __footer.html  __navbar.html  book_ticket.html  create_ticket.html  delete_ticket .html  delete_ticket.html  edt_ticket.html  for_client.html  for_company.html  help.html  home.html  index.html  index_book.html  poll.html  register.html  ticket.html  ticket_booking.html  ticket_booking_card.html
